[gd_scene load_steps=10 format=3 uid="uid://b8q0kjk13674u"]

[ext_resource type="Script" path="res://objects/level/Monitor/Monitor.gd" id="1_3s5mw"]
[ext_resource type="SpriteFrames" uid="uid://btcw48fsrt1hl" path="res://objects/level/Monitor/sprites/monitor.tres" id="2_2trqc"]
[ext_resource type="AudioStream" uid="uid://cam24mv676fns" path="res://objects/enemies/badnik/sounds/pop.wav" id="3_1wk54"]
[ext_resource type="PackedScene" uid="uid://dw7syfbdxqvkk" path="res://objects/general/EditorObjectBounds/EditorObjectBounds.tscn" id="4_3hsxn"]
[ext_resource type="Script" path="res://objects/general/control_handles/HandleContainer.gd" id="5_b3oyq"]
[ext_resource type="Theme" uid="uid://dsc2sl34kqmp" path="res://sprites/ui/ui_theme.tres" id="6_2d471"]
[ext_resource type="Script" path="res://objects/level/Monitor/MonitorItemHandle.gd" id="7_541oi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okmh3"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vkaly"]
size = Vector2(28, 28)

[node name="Monitor" type="AnimatableBody2D"]
collision_layer = 64
collision_mask = 83
sync_to_physics = false
script = ExtResource("1_3s5mw")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_2trqc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_okmh3")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_vkaly")
debug_color = Color(0.984314, 0, 0.360784, 0.419608)

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1wk54")

[node name="EditorObjectBounds" parent="." instance=ExtResource("4_3hsxn")]
position = Vector2(0, 1)
size = Vector2(30, 30)

[node name="HandleContainer" type="Control" parent="." node_paths=PackedStringArray("target")]
layout_mode = 3
anchors_preset = 0
offset_left = -15.0
offset_top = -14.0
offset_right = 15.0
offset_bottom = 16.0
script = ExtResource("5_b3oyq")
target = NodePath("..")

[node name="MonitorItemHandle" type="Button" parent="HandleContainer" node_paths=PackedStringArray("target")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -10.0
offset_top = -24.0
offset_right = 10.0
offset_bottom = -4.0
grow_horizontal = 2
theme = ExtResource("6_2d471")
theme_type_variation = &"HandleButton"
icon_alignment = 1
script = ExtResource("7_541oi")
target = NodePath("../..")

[connection signal="body_entered" from="hitbox" to="." method="on_hit_hitbox"]
[connection signal="pressed" from="HandleContainer/MonitorItemHandle" to="." method="_on_item_handle_pressed"]
